<resources>
    <string name="app_name">Películas App (Sofftek - Reto Android)</string>
    <!--animations-->
    <string name="anim_fade_in">fade-in</string>
    <string name="anim_fade_out">fade-out</string>
    <!--content descriptions-->
    <string name="cd_imv_logo">logo</string>
    <string name="cd_imv_process">process</string>
    <string name="cd_imv_success">success</string>
    <string name="cd_imv_error">error</string>
    <!--auth-->
    <string name="username_example">Admin</string>
    <string name="password_example">Password*123</string>
    <!--general-->
    <!--errors-->
    <string name="error_service">Error en el  servicio</string>
    <string name="error_connection">Error en la conexión</string>
    <!--validations-->
    <string name="validate_password">ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789()-_.,;:!¡¿?+/\'"$*#@%=°&amp;</string>
    <string name="validate_numbers">1234567890</string>
    <string name="validate_decimal_numbers">1234567890.1234567890</string>
    <string name="validate_names">abcdefghijklmnñopqrstuvwxyzáéíóúü ABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚÜ</string>
    <string name="validate_alphanumeric">ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789</string>
    <!--login-->
    <string name="login">Iniciar sesión</string>
    <string name="login_desc">Por favor inicie sesión para continuar</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="username_error_empty">Ingrese nombre de usuario</string>
    <string name="password_error_empty">Ingrese contraseña</string>
    <string name="credentials_error_empty">Ingrese nombre de usuario y contraseña</string>
    <string name="login_validate">Validando credenciales</string>
    <string name="login_validate_desc">Verificando si las credenciales se encuentra en el sistema.</string>
    <string name="login_success">Credenciales correctas</string>
    <string name="login_success_desc">El nombre de usuario y contraseña son correctos.</string>
    <string name="login_error">Credenciales incorrectas</string>
    <string name="login_error_desc">Revise si el nombre de usuario y/o contraseña son correctos.</string>
</resources>